# FinanceIQ

./: .claude-config  .coveragerc  .env.example  .gitignore  ANALYSIS_REPORT.md  API_INTEGRATION_GUIDE.md  API_KEYS_GUIDE.md  CLEANUP_LOG.md  COMPLETE_GUIDE.md  COUNTRY_DIVERSIFICATION_UPDATE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DESIGN.md  Dockerfile  FINAL_STATUS.md  FINANCEIQ_PRO_COMPLETE.md  FINANCEIQ_PRO_COMPREHENSIVE_DOCUMENTATION.md  FINANCEIQ_PRO_DOCUMENTATION.docx  FINANCEIQ_PRO_V1_7_STATUS.md  FUNDPORTAL_PRO_COMPREHENSIVE_DOCUMENTATION.md  FUNDPORTAL_PRO_DOCUMENTATION.docx  GAME_CHANGER_FEATURES.md  GITHUB_AUTH_GUIDE.md  GITHUB_DEPLOYMENT_SUMMARY.md  GIT_COMMIT_TEMPLATE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_LOG.md  INTEGRATION_COMPLETE.md  KILLER_FEATURES_ANALYSIS.md  PHASE_2_BUILD_PROMPT.md  PHASE_3_4_REMAINING_MODULES_PLAN.md  PHASE_3_COMPLETION_ANNOUNCEMENT.md  PHASE_3_SUMMARY.md  PLATFORM_DOCUMENTATION.md  PRODUCTION_READY_GUIDE.md  PR_SUMMARY.md  QA_ANALYSIS_REPORT.md  (+39 more)
.claude/: settings.local.json
.streamlit/: config.toml  secrets.toml.example
api/: kap_integration.py
app/: __init__.py  main.py
dashboard/: Dockerfile
deployment/: fundpilot.nginx.conf  fundpilot.service  fundportal.nginx.conf  fundportal.service  nginx.conf
docs/: ADSENSE_ADMOB_SETUP.md  API_SETUP_CHECKLIST.md  API_USAGE_STRATEGY.md  CLAUDE_CODE_MULTI_AGENT_AUDIT_PROMPT.md  CLAUDE_CODE_QA_PROMPTS.md  DEPLOYMENT_TROUBLESHOOTING.md  ENTROPY_METRICS.md  FREE_API_SETUP_GUIDE.md  FUNDPILOT_FRONTEND_MIGRATION_PLAN.md  FUNDPILOT_RELEASE_UPDATE_2026-06-09.md  FUNDPILOT_UI_REDESIGN_PLAN.md  FUNDPORTAL_RELEASE_UPDATE_2026-06-09.md  OFFICIAL_DATA_PLAYBOOK.md  PRODUCTION_RUNBOOK.md  QUICK_START.md  SECRET_ROTATION_CHECKLIST.md  STREAMLIT_CLOUD_SETUP.md  USER_GUIDE.md  USER_GUIDE_EN.md  VIDEO_SCRIPTS.md  api.md  changelog.md  financeiq_deployement_guide.md  financeiq_user_guide.md  imse_indicator.pine  index.md  quickstart.md
examples/: entropy_usage_examples.py
modules/: __init__.py  (+29 more)
(+228 files in other folders)
